<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

    <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:drawableTop="@drawable/img_avatar"
            android:layout_gravity="center"/>


    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center"
            android:backgroundTint="@color/background_blue_color"
            android:gravity="center"
            android:hint="@string/enter_roomId_hint"
            android:lines="1"
            android:textColor="@color/dark_black"
            android:textColorHint="@color/dark_black"
            android:textSize="@dimen/text_size_normal"
            android:singleLine="true"/>

    <Button
            android:id="@+id/bt_join_room"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_35"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/btn_create_rtc_room_bg"
            android:text="@string/join_class_room"
            android:textColor="@color/main_background"
            android:textSize="@dimen/text_size_normal"
            android:layout_gravity="center"/>

    <Button
            android:id="@+id/bt_join_cancel"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_35"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/btn_create_rtc_room_bg"
            android:text="@string/join_room_cancel"
            android:textColor="@color/main_background"
            android:textSize="@dimen/text_size_normal"
            android:layout_gravity="center"/>

</LinearLayout>